config(gh-actions): +0

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <mainClass>dev.sangdang.todocrud.TodoCrudApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -79,6 +80,9 @@
                         <host>tcp://localhost:2375</host>
                         <tlsVerify>false</tlsVerify>
                     </docker>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
                 </configuration>
             </plugin>
         </plugins>
