--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,11 @@ on:
 env:
   AWS_REGION: ap-southeast-1                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: sang_dang/todo-crud           # set this to your Amazon ECR repository name
-#  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-#  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-#  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
-#  # file, e.g. .aws/task-definition.json
-#  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
+  #  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
+  #  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
+  #  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
+  #  # file, e.g. .aws/task-definition.json
+  #  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
   # containerDefinitions section of your task definition
 
 jobs:
@@ -23,9 +23,17 @@ jobs:
     environment: production
 
     steps:
-#      Download the code
+      #      Download the code
       - name: Checkout
         uses: actions/checkout@v5
+
+      # Setup java
+      - name: Set up JDK 25
+        uses: actions/setup-java@v4
+        with:
+          java-version: '25'
+          distribution: 'temurin'
+          cache: 'maven'
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@0e613a0980cbf65ed5b322eb7a1e075d28913a83
