--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,8 +53,9 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           chmod +x ./mvnw
-          ./mvnw spring-boot:build-image -Dspring-boot.build-image.imageName=$IMAGE_TAG -f pom.xml
-          docker images
+          ./mvnw spring-boot:build-image \
+            -Dspring-boot.build-image.imageName=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG \
+            -Dspring-boot.build-image.docker.host=unix:///var/run/docker.sock
 #          docker tag $IMAGE_TAG
 #          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 #          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
