--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ on:
 env:
   AWS_REGION: ap-southeast-1                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: sang_dang/todo-crud           # set this to your Amazon ECR repository name
+  DOCKER_HOST: unix:///var/run/docker.sock
   #  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
   #  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
   #  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
