--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,7 @@ jobs:
           ./mvnw spring-boot:build-image \
             -Dspring-boot.build-image.imageName=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG \
             -Dspring-boot.build-image.docker.host=unix:///var/run/docker.sock
+          docker images
 #          docker tag $IMAGE_TAG
 #          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 #          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
