--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,13 +54,14 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           chmod +x ./mvnw
+          echo "::group::Maven Build & Dockerize"
           ./mvnw spring-boot:build-image \
-            -Dspring-boot.build-image.imageName=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG \
-            -Dspring-boot.build-image.docker.host=unix:///var/run/docker.sock
-          docker images
-#          docker tag $IMAGE_TAG
-#          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-#          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+            -ntp
+            -B
+            -Dspring-boot.build-image.imageName=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
+          echo "::endgroup::"
+          docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
 #      - name: Fill in the new image ID in the Amazon ECS task definition
 #        id: task-def
