--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 env:
-  AWS_REGION: ap-southeast-1                  # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: sang_dang/todo-crud           # set this to your Amazon ECR repository name
+#  AWS_REGION: ap-southeast-1                  # set this to your preferred AWS region, e.g. us-west-1
+#  ECR_REPOSITORY: sang_dang/todo-crud           # set this to your Amazon ECR repository name
   DOCKER_HOST: unix:///var/run/docker.sock
   #  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
   #  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
@@ -41,7 +41,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -57,10 +57,9 @@ jobs:
           echo "::group::Maven Build & Dockerize"
           ./mvnw spring-boot:build-image \
             -ntp
-            -Dspring-boot.build-image.imageName=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
+            -Dspring-boot.build-image.imageName=${{ vars.ECR_REPOSITORY }}:$IMAGE_TAG
           echo "::endgroup::"
-          docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          docker push ${{ vars.ECR_REPOSITORY }}:$IMAGE_TAG
 
 #      - name: Fill in the new image ID in the Amazon ECS task definition
 #        id: task-def
