--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,9 +57,10 @@ jobs:
           echo "::group::Maven Build & Dockerize"
           ./mvnw spring-boot:build-image \
             -ntp
-            -Dspring-boot.build-image.imageName=${{ vars.ECR_REPOSITORY }}:$IMAGE_TAG
+            -Dspring-boot.build-image.imageName=${{ vars.ECR_REPOSITORY }}
           echo "::endgroup::"
-          docker push ${{ vars.ECR_REPOSITORY }}:$IMAGE_TAG
+          docker tag library/todo-crud:0.0.1-SNAPSHOT ${{ vars.ECR_REPOSITORY }}
+          docker push ${{ vars.ECR_REPOSITORY }}
 
 #      - name: Fill in the new image ID in the Amazon ECS task definition
 #        id: task-def
