config(gh-actions): +15

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,17 +6,6 @@ on:
       - 'dev-*'
   workflow_dispatch:
 
-env:
-#  AWS_REGION: ap-southeast-1                  # set this to your preferred AWS region, e.g. us-west-1
-#  ECR_REPOSITORY: sang_dang/todo-crud           # set this to your Amazon ECR repository name
-  DOCKER_HOST: unix:///var/run/docker.sock
-  #  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  #  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  #  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
-  #  # file, e.g. .aws/task-definition.json
-  #  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
-  # containerDefinitions section of your task definition
-
 jobs:
   deploy:
     name: Deploy
@@ -50,16 +39,16 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}
+          DOCKER_HOST: unix:///var/run/docker.sock
+          FULL_IMAGE_NAME: ${{ steps.login-ecr.outputs.registry }}/${{ vars.ECR_REPOSITORY }}:${{ github.sha }}
         run: |
           chmod +x ./mvnw
           echo "::group::Maven Build & Dockerize"
           ./mvnw spring-boot:build-image \
             -ntp \
-            -Dspring-boot.build-image.imageName=${{ vars.ECR_REPOSITORY }}
+            -Dspring-boot.build-image.imageName=FULL_IMAGE_NAME
           echo "::endgroup::"
-          docker push ${{ vars.ECR_REPOSITORY }}
+          docker push $FULL_IMAGE_NAME
 
 #      - name: Fill in the new image ID in the Amazon ECS task definition
 #        id: task-def
