config(gh-actions): +16

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,10 +43,10 @@ jobs:
           FULL_IMAGE_NAME: ${{ steps.login-ecr.outputs.registry }}/${{ vars.ECR_REPOSITORY }}:${{ github.sha }}
         run: |
           chmod +x ./mvnw
-          echo "::group::Maven Build & Dockerize"
+          echo "::group::Maven Build & Dockerize to image: $FULL_IMAGE_NAME"
           ./mvnw spring-boot:build-image \
             -ntp \
-            -Dspring-boot.build-image.imageName=FULL_IMAGE_NAME
+            -Dspring-boot.build-image.imageName=$FULL_IMAGE_NAME
           echo "::endgroup::"
           docker push $FULL_IMAGE_NAME
 
