--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,8 @@ jobs:
             -Dspring-boot.build-image.imageName=$FULL_IMAGE_NAME
           echo "::endgroup::"
           docker push $FULL_IMAGE_NAME
+#         Allow the next step to grab the full image name
+          echo "image=$FULL_IMAGE_NAME" >> $GITHUB_OUTPUT
 
 #      - name: Fill in the new image ID in the Amazon ECS task definition
 #        id: task-def
