--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=todo-crud
 management.endpoints.web.exposure.include=*
+springdoc.swagger-ui.enabled=true
+
+spring.cloud.aws.region.status: ap-southeast-1
+
+spring.cloud.aws.dynamodb.table-prefix=todocrud_
+spring.cloud.aws.credentials.instance-profile=true
